data/derived/comb/progs/unify/prog7023.ml.out
Characters 186-187:
  List.fold_left f base l;;
                        ^
Error: This expression has type string list
       but an expression was expected of type string list list
       Type string is not compatible with type string list 
